@@ -33,6 +33,7 @@ $ -> Language fix or change
    - changed params to fields in module XML files.
    - changed add module page to modal popup.
    - added layout override selector field to all modules
+ ^ Remove control and numnews fields from jos_modules table.
 
 23-Nov-2009 Ron Severdia
 ^ Added panels on Edit Category screen, new panels added for default params
